Initial Design Update

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700"
@@ -34,7 +34,7 @@
       content="width=device-width, initial-scale=1, user-scalable=no"
     />
     <meta name="terra-webextension" />
-    <title>Terraswap</title>
+    <title>VRTDex</title>
   </head>
   <body>
     <div id="terraswap"></div>
