--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, user-scalable=no"
     />
-    <meta name="terra-webextension" />
+    <meta name="VRTDex-webextension" />
     <title>VRTDex</title>
   </head>
   <body>
