change swap page

--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,8 @@
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700"
-    />
-    <link
+    /> -->
+    <!-- <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     /> -->
