--- a/public/index.html
+++ b/public/index.html
@@ -11,16 +11,14 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700"
     /> -->
-    <!-- <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-    /> -->
+    
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <!-- <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-7TNNTT403E"
     ></script> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <script>
       window.dataLayer = window.dataLayer || []
       function gtag() {
